feat: add article page
add article page, edit article layout component style, add loading component to show when data is fetching and add dayjs package to show formatted createdAt articles date.

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       }
 
       .sk-chase {
-        width: 40px;
-        height: 40px;
+        width: 5rem;
+        height: 5rem;
         position: relative;
         animation: sk-chase 2.5s infinite linear both;
       }
